--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -530,3 +530,26 @@ footer{
 		position: relative;
 	}
 }
+
+
+
+
+/*------------------------- CSS FOR GALLERY ---------------------*/
+
+
+.tmbnl{
+    width: 100%;
+    border-style: solid;
+    border-color: white;
+    border-width: 2px;
+    background-color: rgb(0,255,0);
+}
+.tmbnl img{
+    cursor: pointer;
+    width: 100%;
+    transition: all 0.5s linear 0s;
+}
+.tmbnl img:hover{
+    opacity: 0.9;
+}
+/*---------------------------------------------------------------*/
